fix z-index of header to be over page dividers

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,6 +117,7 @@ pre code.hljs {
 	left: 0;
 	right: 0;
 	background: $white;
+	z-index: 1;
 	/*
 	*	Navigation Menu - http://refills.bourbon.io/unstyled/ (see "Navigation")
 	*/
